--- a/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
+++ b/src/app/views/pages/servicos/exibicao-servicos/exibicao-servicos.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-6">
         <mat-form-field class="" appearance="standard" fxFlex="grow">
             <mat-label class="label">Pesquisar serviço</mat-label>
-            <input matInput formControlName="filtro" (change)="filtrarServicos()"/> 
+            <input matInput formControlName="filtro" (change)="filtrarServicos()"/>
         </mat-form-field>
     </div>
     <div class="col-md-3">
@@ -51,98 +51,14 @@
 <div style="margin-top: 3rem;">
     <!-- LOADING -->
     <mat-progress-bar *ngIf="load" mode="indeterminate"></mat-progress-bar>
-    <!-- Tabela de serviços -->
-    <div class="mat-elevation-z8">
-        <table aria-label="tableServicos" mat-table [dataSource]="dataSource">
-            <!-- Aplicação do Serviço -->
-            <ng-container matColumnDef="aplicacao">
-                <th class="color-title" mat-header-cell *matHeaderCellDef>
-                    Categoria
-                </th>
-                <td mat-cell *matCellDef="let element">{{ element.categoria }}</td>
-            </ng-container>
 
-            <!-- Serviço -->
-            <ng-container matColumnDef="servico">
-                <th class="color-title" mat-header-cell *matHeaderCellDef>
-                    Nome do Serviço
-                </th>
-                <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
-            </ng-container>
+    <vex-lista-servicos *ngIf="verLista" [listaServicos]="listaServicos" [dataSource]="dataSource" [displayedColumns]="displayedColumns" (eventModalCadastrarEditar)="modalCadastrarEditar($event.servico)"
+    (eventModalDeletar)="abrirModalDeletar($event.servico)"
+    (eventModalOcultar)="abrirModalOcultar($event.servico)"
+    (eventModalPromocional)="abrirModalPromocional($event.servico)">
+    </vex-lista-servicos>
 
-            <!-- Descrição do Serviço -->
-            <ng-container matColumnDef="descricao">
-                <th class="color-title" mat-header-cell *matHeaderCellDef>
-                    Descrição do Serviço
-                </th>
-                <td mat-cell *matCellDef="let element">{{ element.descricao }}</td>
-            </ng-container>
-
-            <!-- Tempo do Serviço -->
-            <ng-container matColumnDef="tempo">
-                <th class="color-title" mat-header-cell *matHeaderCellDef>Tempo</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.tempoEstimado }}
-                </td>
-            </ng-container>
-
-            <!-- Preço do Serviço -->
-            <ng-container matColumnDef="preco">
-                <th class="color-title" mat-header-cell *matHeaderCellDef>Preço</th>
-                <td mat-cell *matCellDef="let servico">{{ servico.promocional? servico.valorPromocional : servico.valor
-                    }}
-                </td>
-            </ng-container>
-
-            <!-- Ícone da tabela -->
-            <ng-container matColumnDef="icone">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td class="layout-menu" mat-cell *matCellDef="let servico">
-                    <button id="editar" mat-icon-button aria-label="ícone Button" class="icon-spacing"
-                        (click)="modalCadastrarEditar(servico)">
-                        <mat-icon color="primary"> border_color</mat-icon>
-                    </button>
-                    <button id="excluir" mat-icon-button aria-label="ícone Button" class="icon-spacing"
-                        (click)="abrirModalDeletar(servico)">
-                        <mat-icon color="warn">delete</mat-icon>
-                    </button>
-                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-                        <mat-icon>more_vert</mat-icon>
-                    </button>
-
-                    <mat-menu #menu="matMenu">
-                        <button *ngIf="servico.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
-                            (click)="abrirModalOcultar(servico)">
-                            <mat-icon class="icon-color">visibility</mat-icon>
-                            <span class="descricaoicon">Ocultar Serviço</span>
-                        </button>
-
-                        <button *ngIf="!servico.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
-                            (click)="abrirModalOcultar(servico)">
-                            <mat-icon class="icon-color">visibility_off</mat-icon>
-                            <span class="descricaoicon">Exibir Serviço</span>
-                        </button>
-
-                        <button *ngIf="!servico.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
-                            (click)="abrirModalPromocional(servico)">
-                            <mat-icon class="icon-color">money_off</mat-icon>
-                            <span class="descricaoicon">Tornar Promocional</span>
-                        </button>
-
-                        <button *ngIf="servico.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
-                            (click)="abrirModalPromocional(servico)">
-                            <mat-icon class="icon-color">attach_money</mat-icon>
-                            <span class="descricaoicon">Remover Promoção</span>
-                        </button>
-                    </mat-menu>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Selecionar página do produto">
-        </mat-paginator>
-    </div>
+    <vex-grade-servicos *ngIf="verGrade && listaServicos.length" [listaServico]="listaServicos" (eventModalCadastrarEditar)="modalCadastrarEditar($event.servico)"
+    (eventModalDeleter)="abrirModalDeletar($event.servico)">
+    </vex-grade-servicos>
 </div>
