adicionando e dimencionando tabela
mudança de nome das vendas registadas no lado direito com seus valores.
determinado os nomes das colunas e seus elementos.
Esperando padronização dos elementos inernos de cada linha.

--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -1,75 +1,75 @@
 <!-- Filtro da tabela de fluxo de caixa -->
 <div class="filter">
-    <div class="search">
-        <mat-form-field appearance="standard">
-            <mat-label>Pesquisar venda</mat-label>
-            <input matInput />
-        </mat-form-field>
-    </div>
+  <div class="search">
+    <mat-form-field appearance="standard">
+      <mat-label>Pesquisar venda</mat-label>
+      <input matInput />
+    </mat-form-field>
+  </div>
 
-    <div class="option">
-        <mat-form-field appearance="standard">
-            <mat-label>Status</mat-label>
-            <mat-select>
-                <mat-option value="one">Todas</mat-option>
-                <mat-option value="two">Cabelo</mat-option>
-                <mat-option value="three">Barba</mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    <div class="btnAdd">
-        <button (click)="trocarTab()" mat-button mat-raised-button color="primary">Adicionar venda <mat-icon>add</mat-icon></button>
-    </div>
-    <div class="icon-csv">
-        <img src="../../../../assets/img/csv.svg" alt="icone csv">
-    </div>
+  <div class="option">
+    <mat-form-field appearance="standard">
+      <mat-label>Status</mat-label>
+      <mat-select>
+        <mat-option value="one">Todas</mat-option>
+        <mat-option value="two">Cabelo</mat-option>
+        <mat-option value="three">Barba</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="btnAdd">
+    <button (click)="trocarTab()" mat-button mat-raised-button color="primary">Adicionar venda
+      <mat-icon>add</mat-icon></button>
+  </div>
+  <div class="icon-csv">
+    <img src="../../../../assets/img/csv.svg" alt="icone csv">
+  </div>
 </div>
 
 <!-- Tebela Fluxo e Caixa -->
 <div class="tabela_fluxo-caixa">
-    <!-- tabela -->
-    <div class="example-container mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" aria-label="tabela dados das vendas e serviços">
+  <!-- tabela -->
+  <div class="">
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+      <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      </ng-container>
 
-            <!-- Data -->
-            <ng-container matColumnDef="data">
-                <th mat-header-cell *matHeaderCellDef> Data </th>
-                <td mat-cell *matCellDef="let element"> {{element.data}} </td>
-            </ng-container>
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+          <div class="example-element-detail" [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-description">
+              -><span class="nome">{{element.detalheNome}}</span> -
+              <span class="qtd">{{element.detalheQtd}}</span>-
+              <span class="valor">{{element.detalheValor}}</span>
+            </div>
+          </div>
+        </td>
+      </ng-container>
 
-            <!-- Descrição -->
-            <ng-container matColumnDef="descricao">
-                <th mat-header-cell *matHeaderCellDef> Descrição </th>
-                <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
-            </ng-container>
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+        [class.example-expanded-row]="expandedElement === element"
+        (click)="expandedElement = expandedElement === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    </table>
+  </div>
 
-            <!-- Status -->
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef> Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-            </ng-container>
 
-            <!--Valor -->
-            <ng-container matColumnDef="valor">
-                <th mat-header-cell *matHeaderCellDef> Valor </th>
-                <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
-            </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+  <!-- descrição -->
+  <div class="descricao">
+    <div class="total">
+      <h3>Vendas Registradas: <span>R$960,00</span></h3>
+      <h3>Vendas Canceladas: <span style="color: #da0000;">R$320,00</span></h3>
+      <h3>Total a Receber: <span style="color: #219653;">R$180,00</span></h3>
     </div>
-
-    <!-- descrição -->
-    <div class="descricao">
-        <div class="total">
-            <h3>Total Confirmado: <span style="color: #219653;">R$960,00</span></h3>
-            <h3>Total Reservado: <span style="color: #DAAA00;">R$320,00</span></h3>
-            <h3>Total Cancelado: <span>R$180,00</span></h3>
-        </div>
-        <div class="btn">
-            <button mat-button class="btn-fechar_caixa" mat-raised-button color="primary"
-            (click)="fecharCaixa()">Fechar caixa</button>
-        </div>
+    <div class="btn">
+      <button mat-button class="btn-fechar_caixa" mat-raised-button color="primary" (click)="fecharCaixa()">Fechar
+        caixa</button>
     </div>
+  </div>
 </div>
