--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.scss
@@ -1,61 +1,118 @@
 // Filtro
-.filter{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 30px;
-    .search{
-        width: 50%;
-        mat-form-field{
-            display: inline;
-        }
+.filter {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 30px;
+
+  .search {
+    width: 50%;
+
+    mat-form-field {
+      display: inline;
     }
-    .btnAdd{
-        border-radius: 5px;
-        color: #ffffff;
-    }
-    .icon-csv{
-        cursor: pointer;
-    }
+  }
+
+  .btnAdd {
+    border-radius: 5px;
+    color: #ffffff;
+  }
+
+  .icon-csv {
+    cursor: pointer;
+  }
 }
 
 
 // Tabela
-.example-container {
-    height: 400px;
-    width: 70%;
-    overflow: auto;
-}
-
 table {
-    width: 100%;
+  margin-left: 10%;
+  width: 100%;
 }
 
-.tabela_fluxo-caixa{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.example-element-description {
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  display: flex;
+  flex-direction: row;
+  min-width: 35rem;
+  font-style: oblique;
+  color: rgb(80, 80, 80);
+
+
+    .nome {
+      margin-left: 10px;
+      padding-right: 10px;
+    }
+
+    .qtd {
+      margin-left: 10px;
+      padding-right: 10px;
+    }
+
+    .valor {
+      margin-left: 10px;
+    }
+
+
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
+
+.tabela_fluxo-caixa {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 // Descriçao da venda
-.descricao{
-    .total{
-        h3{
-            margin-bottom: 10px;
-        }
+.descricao {
+
+  margin-right: 10%;
+
+  .total {
+    h3 {
+      margin-bottom: 10px;
     }
-    .btn{
-        display: flex;
-        justify-content: center;
-        margin-top: 50px;
-        .btn-fechar_caixa{
-            border-radius: 5px;
-            color: #ffffff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+  }
+
+  .btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+
+    .btn-fechar_caixa {
+      border-radius: 5px;
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+  }
 }
