--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -30,20 +30,27 @@
 <div class="tabela_fluxo-caixa">
   <!-- tabela -->
   <div class="">
-    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+    <table aria-label="tabela-agendamentos" mat-table [dataSource]="dataSource" multiTemplateDataRows
+      class="mat-elevation-z8">
       <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
         <th mat-header-cell *matHeaderCellDef> {{column}} </th>
         <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
       </ng-container>
 
-      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <!-- Coluna de conteúdo expandido - A linha de detalhes é composta por uma coluna que se estende por todas as colunas -->
       <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
           <div class="example-element-detail" [@detailExpand]="element === expandedElement ? 'expanded' : 'collapsed'">
             <div class="example-element-description">
-              -><span class="nome">{{element.detalheNome}}</span> -
-              <span class="qtd">{{element.detalheQtd}}</span>-
-              <span class="valor">{{element.detalheValor}}</span>
+              <mat-list role="list" style="width: 100%;">
+                <mat-list-item style="font-size: 14px;margin-top: -20px; color: rgb(119, 119, 119);" role="listitem"
+                  *ngFor="let detalhe of element.detalhes">
+                  <span class="invisivel"></span>
+                  <span class="nome">{{detalhe.detalheNome}}</span>
+                  <span class="qtd">{{detalhe.detalheQtd}}</span>
+                  <span class="valor">{{detalhe.detalheValor | currency: 'BRL'}}</span>
+                </mat-list-item>
+              </mat-list>
             </div>
           </div>
         </td>
