--- a/src/app/views/pages/cadastro/cadastro.component.html
+++ b/src/app/views/pages/cadastro/cadastro.component.html
@@ -30,7 +30,7 @@
 
                         <mat-form-field fxFlex="48%">
                             <mat-label>CPF/CNPJ</mat-label>
-                            <input formControlName="cpfCnpj" matInput required />
+                            <input formControlName="cpfCnpj" mask="CPF_CNPJ" matInput required />
                         </mat-form-field>
                     </div>
 
