voltando detalheValor para string

--- a/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
+++ b/src/app/views/pages/caixa/fluxo-caixa/fluxo-caixa.component.html
@@ -48,7 +48,7 @@
                   <span class="invisivel"></span>
                   <span class="nome">{{detalhe.detalheNome}}</span>
                   <span class="qtd">{{detalhe.detalheQtd}}</span>
-                  <span class="valor">{{detalhe.detalheValor | currency: 'BRL'}}</span>
+                  <span class="valor">{{detalhe.detalheValor}}</span>
                 </mat-list-item>
               </mat-list>
             </div>
