--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.scss
@@ -26,7 +26,7 @@
         font-size: 30px;
         color: rgb (black)
       }
-      button[type="file"] {
+      input[type="file"] {
         display: none;
       }
       p{
