Atualizaçaõ de Recusado para Cancelado

--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -12,7 +12,7 @@
             <mat-select formControlName="status" (selectionChange)="filtrarAgendamentos()">
                 <mat-option value="aceito">Aceito</mat-option>
                 <mat-option value="pendente">Pendente</mat-option>
-                <mat-option value="recusado">Recusado</mat-option>
+                <mat-option value="cancelado">Recusado</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
