--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -24,7 +24,7 @@ table {
   border-radius: 8px;
 }
 
-.recusado {
+.cancelado {
   background: rgb(255, 103, 103);
   width: 5.3rem;
   display: flex;
@@ -48,7 +48,7 @@ th {
   width: 5.3rem;
 }
 
-.recusado .mat-form-field-flex {
+.cancelado .mat-form-field-flex {
   width: 5.3rem;
 }
 
