--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.scss
@@ -34,6 +34,17 @@ table {
   border-radius: 8px;
 }
 
+.concluido {
+  background: rgb(255, 255, 255);
+  width: 5.3rem;
+  display: flex;
+  margin-left: 10px;
+  margin-top: 3px;
+  margin-bottom: 2px;
+  border-radius: 8px;
+  border: 1px solid #0000;
+}
+
 th {
   font-size: 14.5px !important;
   font-weight: 700 !important;
@@ -53,6 +64,10 @@ th {
 }
 
 .pendente .mat-form-field-flex {
+  width: 5.3rem;
+}
+
+.concluido .mat-form-field-flex {
   width: 5.3rem;
 }
 
