Adição de novo status Concluído

--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/exibicao-agendamentos.component.html
@@ -13,6 +13,7 @@
                 <mat-option value="aceito">Aceito</mat-option>
                 <mat-option value="pendente">Pendente</mat-option>
                 <mat-option value="cancelado">Recusado</mat-option>
+                <mat-option value="concluido">Concluído</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
