configuracoes no dropdown

--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -16,21 +16,27 @@
             <div [matMenuTriggerFor]="menu" style="margin-right: 10%;" class=" example-full-width">
               <div class="centInputImg">
                 <div class="absolute">
-                  <label [hidden]="mostraIcone">
+                  <label [hidden]="mostraIcone" >
                     <mat-icon>add_a_photo</mat-icon>
                   </label>
+                  <input #imagemServico type="file" (change)="capturarImagem($event,'imagem do servico')" accept="image/*"/>
+                  <div id="menuFoto">
+                    <mat-menu #menu="matMenu">
+                      <div class="menuButton">
+                        <button (click)="imagemServico.click()">
 
-                  <mat-menu #menu="matMenu">
-                    <button (click)="imagemServico.click()">
-                      <input #imagemServico type="file" (change)="capturarImagem($event,'imagem do servico')">
-                        Alterar Foto
-                    </button>
-                    <button (click)="removerFoto()">
-                      <span>
-                        Remover Foto
-                      </span>
-                    </button>
-                  </mat-menu>
+                            Alterar Foto
+
+                        </button>
+                        <br>
+                        <button (click)="removerFoto()">
+
+                            Remover Foto
+
+                        </button>
+                      </div>
+                    </mat-menu>
+                  </div>
                 </div>
                 <div class="rounded-circle">
                   <img (mouseover)="mostraIcone=false" (mouseout)="mostraIcone=true"
