trazendo o select da lista para a grade

--- a/src/app/core/lib/shared/card/card.component.html
+++ b/src/app/core/lib/shared/card/card.component.html
@@ -21,8 +21,38 @@
 			<mat-icon [icIcon]="icBorderColor"></mat-icon>
 		</button>
 
+    <mat-menu #menu="matMenu">
+      <button *ngIf="item.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalOcultar()">
+          <mat-icon class="icon-color">visibility</mat-icon>
+          <span class="descricaoicon">Ocultar Serviço</span>
+      </button>
+
+      <button *ngIf="!item.ativo" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalOcultar()">
+          <mat-icon class="icon-color">visibility_off</mat-icon>
+          <span class="descricaoicon">Exibir Serviço</span>
+      </button>
+
+      <button *ngIf="!item.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalPromocional()">
+          <mat-icon class="icon-color">money_off</mat-icon>
+          <span class="descricaoicon">Tornar Promocional</span>
+      </button>
+
+      <button *ngIf="item.promocional" mat-icon-button aria-label="ícone Button" class="iconmenu"
+          (click)="abrirModalPromocional()">
+          <mat-icon class="icon-color">attach_money</mat-icon>
+          <span class="descricaoicon">Remover Promoção</span>
+      </button>
+  </mat-menu>
+
 		<button (click)="abrirModalDeletar()" class="text-secondary" mat-icon-button type="button">
 			<mat-icon [icIcon]="icDelete"></mat-icon>
 		</button>
+
+    <button  *ngIf="item.nome" [matMenuTriggerFor]="menu" class="text-secondary" mat-icon-button type="button">
+      <mat-icon>more_vert</mat-icon>
+    </button>
 	</div>
 </div>
