--- a/src/app/core/lib/shared/card/card.component.html
+++ b/src/app/core/lib/shared/card/card.component.html
@@ -1,28 +1,32 @@
 <div class="card overflow-hidden">
-	<div class="p-4 text-center hover:bg-hover trans-ease-out relative" matRipple>
-		<img alt="" src="https://i.pinimg.com/564x/a0/c1/fa/a0c1fa1f2c55ee6efa2e034c6a2d0fd0.jpg"
-			class="avatar h-24 w-24 mx-auto">
+  <div class="p-4 text-center hover:bg-hover trans-ease-out relative" matRipple>
+    <img *ngIf="item.tempoEstimado" alt="" src="https://i.pinimg.com/564x/a0/c1/fa/a0c1fa1f2c55ee6efa2e034c6a2d0fd0.jpg"
+      class="avatar h-24 w-24 mx-auto">
+    <img *ngIf="item.qtdEstoque" alt=""
+      src="https://global.cdn.magazord.com.br/extratprofessional/img/2022/11/produto/185/invictus-pomada-caramelo-oleo-de-barba-gel-shaving-shampoo-bom-pomada-cera.png?ims=600x600"
+      class="avatar h-24 w-24 mx-auto">
 
-		<h2 class="title mb-1 mt-3">{{item.nomeServico}}</h2>
-		<div class="alinhar">
-			<div class="body-2 text-secondary">
-				<ic-icon [icon]="icAccessTime" class="ltr:mr-1 rtl:ml-1" inline="true"></ic-icon>
-				<span>{{item.tempoEstimado}}min</span>
-			</div>
+    <h2 class="title mb-1 mt-3">{{item.nomeServico || item.nome}}</h2>
+    <div class="alinhar">
+      <div class="body-2 text-secondary">
+        <ic-icon *ngIf="item.tempoEstimado" [icon]="icAccessTime" class="ltr:mr-1 rtl:ml-1" inline="true"></ic-icon>
+        <span>{{item.tempoEstimado || item.qtdEstoque}}<span *ngIf="item.tempoEstimado">min</span> <span
+            *ngIf="item.qtdEstoque"> Items</span></span>
+      </div>
 
-			<div class="body-2 text-secondary">
-				<span>{{ item.valor | currency }}</span>
-			</div>
-		</div>
-	</div>
+      <div class="body-2 text-secondary">
+        <span>{{ item.valor | currency }}</span>
+      </div>
+    </div>
+  </div>
 
-	<div class="bg-app-bar p-2" fxLayout="row" fxLayoutAlign="space-around center">
-		<button (click)="abrirModalCadastrarEditar()" class="text-secondary" mat-icon-button type="button">
-			<mat-icon [icIcon]="icBorderColor"></mat-icon>
-		</button>
+  <div class="bg-app-bar p-2" fxLayout="row" fxLayoutAlign="space-around center">
+    <button (click)="abrirModalCadastrarEditar()" class="text-secondary" mat-icon-button type="button">
+      <mat-icon [icIcon]="icBorderColor"></mat-icon>
+    </button>
 
-		<button (click)="abrirModalDeletar()" class="text-secondary" mat-icon-button type="button">
-			<mat-icon [icIcon]="icDelete"></mat-icon>
-		</button>
-	</div>
+    <button (click)="abrirModalDeletar()" class="text-secondary" mat-icon-button type="button">
+      <mat-icon [icIcon]="icDelete"></mat-icon>
+    </button>
+  </div>
 </div>
