mudando local do mat menu no card

--- a/src/app/core/lib/shared/card/card.component.html
+++ b/src/app/core/lib/shared/card/card.component.html
@@ -51,7 +51,7 @@
 			<mat-icon [icIcon]="icDelete"></mat-icon>
 		</button>
 
-    <button  *ngIf="item.nome" [matMenuTriggerFor]="menu" class="text-secondary" mat-icon-button type="button">
+    <button  *ngIf="item.nome" [matMenuTriggerFor]="menu" class="text-secondary absolute top-3 right-3" mat-icon-button type="button">
       <mat-icon>more_vert</mat-icon>
     </button>
 	</div>
