Atualização das cores dos status da tabela e adição da chamada do css no arquivo html

--- a/src/app/views/pages/agendamentos/exibicao-agendamentos/lista-agendamentos/lista-agendamentos.component.html
+++ b/src/app/views/pages/agendamentos/exibicao-agendamentos/lista-agendamentos/lista-agendamentos.component.html
@@ -56,6 +56,8 @@
                             ? 'pendente'
                             : agendamento.status === 'aceito'
                             ? 'aceito'
+                            : agendamento.status === 'concluido'
+                            ? 'concluido'
                             : 'cancelado' " mat-cell *matCellDef="let agendamento">
                     <mat-form-field appearance="standard">
                         <mat-select [value]="agendamento.status" (selectionChange)="abrirModalEditarStatus($event?.value, agendamento)">
