--- a/src/app/views/pages/servicos/exibicao-promocoes/exibicao-promocoes.component.html
+++ b/src/app/views/pages/servicos/exibicao-promocoes/exibicao-promocoes.component.html
@@ -6,8 +6,8 @@
     </div>
 </mat-radio-group>
 <div class="p-1" *ngIf="exibirProdutos">
-    <vex-exibicao-produtos></vex-exibicao-produtos>
+    <vex-exibicao-produtos [tabPromocional]="tabPromocional"></vex-exibicao-produtos>
 </div>
 <div class="p-2" *ngIf="exibirServicos">
-    <vex-exibicao-servicos></vex-exibicao-servicos>
+    <vex-exibicao-servicos [tabPromocional]="tabPromocional"></vex-exibicao-servicos>
 </div>
