--- a/src/app/views/pages/servicos/servicos.component.html
+++ b/src/app/views/pages/servicos/servicos.component.html
@@ -20,7 +20,7 @@
                 </mat-tab>
                 <mat-tab label="Promoções">
                     <div class="p-6">
-                        <vex-exibicao-promocoes></vex-exibicao-promocoes>
+                        <vex-exibicao-promocoes [tabPromocional]="tabPromocional"></vex-exibicao-promocoes>
                     </div>
                 </mat-tab>
             </mat-tab-group>
